<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.odabbs.lab1.Lab1Activity"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@color/colorAccent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/top_background_description"
        />


    <TextView
        android:id="@+id/textView"
        android:layout_width="204dp"
        android:layout_height="82dp"
        android:text="@string/my_name"
        android:textColor="@color/colorWhite"
        android:textSize="40sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="157dp"
        app:srcCompat="@color/colorAccent"
        tools:layout_editor_absoluteY="412dp"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/bottom_background_description" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:text="@string/major"
        app:layout_constraintRight_toLeftOf="@+id/textView3"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        android:layout_marginEnd="19dp"
        android:layout_marginTop="24dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="31dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="19dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="190dp"
        android:layout_height="27dp"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:text="@string/my_major"
        android:layout_marginStart="27dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/textView4"
        android:layout_marginLeft="27dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:text="@string/fav_course"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="59dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="72dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        android:layout_marginLeft="16dp" />

    <EditText
        android:id="@+id/myEditText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:text=""
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView3" />

    <Button
        android:id="@+id/myButton1"
        android:onClick="onclick"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/button_text"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="3dp"
        app:layout_constraintRight_toRightOf="@+id/textView4"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="12dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView2"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="3dp" />

    <TextView
        android:id="@+id/myTextView1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:text=""
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/myButton1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myEditText1"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="1dp"
        app:layout_constraintLeft_toLeftOf="@+id/myEditText1" />

</android.support.constraint.ConstraintLayout>
